fixed particles canvas on mobile

--- a/src/Header/header.scss
+++ b/src/Header/header.scss
@@ -76,3 +76,7 @@
       transform: translateY(-15px);
     }
   }
+
+  canvas {
+    height: 100vh !important;
+}
