--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,8 @@
 
 html {
     font-size: 62.5%;
+    width: 100%;
+    height: 100%;
 }
 
 body {
@@ -24,7 +26,3 @@ body {
     color: $color-white; 
     background-color: $color-white;
 }  
-
-#particles-js {
-    background-color: $color-dark-navy;
-}
